add_executable(ub_stack mon/UB_stack.cpp mon/UB_stack.h mon/stackTester.cpp)

add_executable(clock fri1/clockTest.cpp fri1/Clock.cpp fri1/Clock.h)
add_executable(safearray fri1/safeArrayTest.cpp fri1/SafeArray.cpp fri1/SafeArray.h)
add_executable(smallint fri1/smallIntTest.cpp fri1/SmallInt.cpp fri1/SmallInt.h)
add_executable(stringptr fri1/StringPtr.cpp)

add_executable(biggiesFO fri2/biggiesFO.cpp)
add_executable(bind fri2/bind.cpp)
add_executable(findDouble fri2/findDouble.cpp)
add_executable(findIfBind fri2/findIfBind.cpp)
add_executable(findIfFunctionObject fri2/findIfFunctionObject.cpp)
add_executable(findIfFunctionPointer fri2/findIfFunctionPointer.cpp)
add_executable(findIfLambda fri2/findIfLambda.cpp)
add_executable(findIfTemplatedFunctionObject fri2/findIfTemplatedFunctionObject.cpp)
add_executable(findIfUsingFunction fri2/findIfUsingFunction.cpp)
add_executable(findInt fri2/findInt.cpp)
add_executable(GT6 fri2/GT6.cpp)
add_executable(GTX fri2/GTX.cpp)
add_executable(lambdaArguments fri2/lambdaArguments.cpp)
add_executable(lambdaCaptures fri2/lambdaCaptures.cpp)
add_executable(lessThan fri2/lessThan.cpp)
add_executable(oldBind fri2/oldBind.cpp)
add_executable(SumPos fri2/SumPos.cpp)
