add_executable(construction mon1/construction.cpp)
add_executable(destruction mon1/destruct.cpp)
add_executable(catchByReference mon1/catchByReference.cpp)
add_executable(catchByValue mon1/catchByValue.cpp)
add_executable(stackUnwinding mon1/stackUnwinding.cpp)
add_executable(tricky mon1/tricky.cpp)

add_executable(dumb fri/dumb.cpp)
add_executable(bad fri/badstyle.cpp)
add_executable(smart fri/smart.cpp)
