set_source_files_properties(mon/constexpr.cpp PROPERTIES COMPILE_FLAGS "-Wno-unused-variable -Wno-unused-parameter")
add_executable(constexpr mon/constexpr.cpp)
add_executable(explicit mon/explicit/min.cpp mon/explicit/min.h mon/explicit/user.cpp)
add_executable(findmin mon/findmin.cpp)

add_executable(specialisation fri/specialisation.cpp)
add_executable(deduction fri/deduction.cpp)
add_executable(defaults fri/defaults.cpp)
add_executable(variadic fri/variadic.cpp)
add_executable(stack fri/stack.h fri/stack_user.cpp)
