add_executable(defaultstack mon/stack.hpp mon/stack-user.cpp)
add_executable(movestack mon/moveSemanticsStack-user.cpp mon/memberTemplatesStack.hpp)
add_executable(staticstack mon/staticStack.hpp mon/staticStack-user.cpp)
add_executable(ttp1 mon/ttp1-user.cpp mon/ttpStack.hpp)
add_executable(ttp2 mon/ttp2-user.cpp mon/ttpStack.hpp)
add_executable(membertemplates mon/memberTemplatesStack.hpp mon/memberTemplatesStack-user.cpp)
add_executable(sortable mon/Sortable.h mon/sortable-user.cpp mon/Urand.h)

add_executable(7.2.1 fri/1traits.cpp)
add_executable(7.2.2 fri/2binding.cpp)
add_executable(7.2.3 fri/3incprint.cpp)
add_executable(7.2.4 fri/4makeunique.cpp)
add_executable(7.2.5 fri/5factorials.cpp)
add_executable(7.2.6 fri/6fib.cpp)
add_executable(7.2.7 fri/7accumulate.cpp)
add_executable(7.2.8 fri/8loops.cpp)
add_executable(7.2.9 fri/9sqrt.cpp)
add_executable(7.2.10 fri/10bubblesort.cpp)
